Improve DCPMon transmission status display
